# gamuda

./: .dockerignore  .env.example  .gitignore  ASSESSMENT_REVIEW.md  Dockerfile  Dockerfile.railway  README.md  architecture.md  decision.md  docker-compose-prod-railway.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  todo.md
app/: main.py
app/ai/: __init__.py  agent.py  data_tools.py  document_tools.py  graph.py  llm_pricing.yaml  pricing.py  prompt.py  state.py
app/api/: router.py
app/core/: __init__.py  config.py  logging.py
app/db/: session.py
app/evaluation/: __init__.py  benchmarking.py
app/models/: __init__.py  base.py  chat_message.py  chat_thread.py  document.py  document_chunk.py  ingestion_job.py
app/schemas/: chat.py  chunk.py  document.py  ingestion.py
app/services/: chat_service.py  chunk_service.py  document_service.py  embedding_service.py  ingestion_service.py  storage_service.py
data/: README.md
data/evaluation/: RAGAS_DATASET_SPEC.md  RAGAS_RESULTS.md  RAGAS_TEST_CASES.md  TC01_TC08_BENCHMARK_REVIEW.md  TC09_TC14_DATA_HYBRID_TEST_CASES.md  ragas_dataset.json  ragas_results.json
data/preparation/: PACKAGE_V3_BRIEF.html  PACKAGE_V3_BRIEF.md  PROGRAMME_BRIEF.html  PROGRAMME_BRIEF.md  executive_steering_update_mar_2026.html  executive_steering_update_mar_2026.md  monthly_status_report_feb_2026.html  monthly_status_report_feb_2026.md  monthly_status_report_jan_2026.html  (+1 more)
frontend/: index.html  package-lock.json  package.json  vercel.json
scripts/: md_to_pdf.py  run_benchmark.py
tests/: test_benchmarking.py
(+102 files in other folders)
